--- a/style.css
+++ b/style.css
@@ -350,6 +350,7 @@ textarea.form__input { resize: vertical; min-height: 100px; }
     .hero__container {
         grid-template-columns: 1fr;
         text-align: center;
+        padding-top: 3rem;
     }
     .hero__content, 
     .hero__image {
